# aerro

./: Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml  release.yml
crates/aerro/: Cargo.toml  build.rs
crates/aerro-macros/: Cargo.toml  README.md
crates/aerro-macros/src/: attrs.rs  handler.rs  handler_derive.rs  lib.rs  operation.rs
crates/aerro-macros/src/codegen/: aerro_impl.rs  mod.rs  thiserror_glue.rs
crates/aerro/benches/: error_path.rs
crates/aerro/examples/: basic.rs  compat.rs  exposure.rs  handler.rs  tower_compose.rs  trace_chain.rs  tracing.rs
crates/aerro/proto/: aerro.v1.proto
crates/aerro/src/: any.rs  category.rs  compat_json.rs  convert.rs  error.rs  exposure.rs  ext.rs  failure.rs  frame.rs  handler.rs  lib.rs  remote.rs  test_support.rs  trace.rs
crates/aerro/src/tower/: client.rs  mod.rs  server.rs
crates/aerro/src/traits/: aerro.rs  from_service_failure.rs  into_status.rs  mod.rs  try_from_status.rs
crates/aerro/src/wire/: decode.rs  encode.rs  envelope.rs  mod.rs
crates/aerro/tests/: forward.rs  macro_basic.rs  macro_handler.rs  perf_alloc.rs  polyglot.rs  proto_gen.rs  roundtrip.rs  smoke.rs  ui.rs
crates/aerro/tests/ui/fail/: code_missing_category.rs  code_missing_category.stderr  forward_multiple_fields.rs  forward_multiple_fields.stderr  missing_code.rs  missing_code.stderr  missing_debug.rs  missing_debug.stderr  system_public.rs  system_public.stderr  unknown_attr.rs  unknown_attr.stderr
crates/aerro/tests/ui/pass/: basic.rs
docs/plans/: 2026-05-25-aerro-refactor.md  2026-05-26-aerro-fix-top5.md
docs/specs/: 2026-05-24-aerro-v1-design.md
src/: lib.rs
