[package]
name = "aerro"
description = "Cross-service gRPC error framework for Rust."
keywords = ["grpc", "tonic", "prost", "error", "trace"]
categories = ["network-programming", "rust-patterns"]
readme = "../../README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[features]
default = ["tonic", "macro", "tracing"]
tonic     = ["dep:tonic", "dep:prost", "dep:bytes", "dep:tower", "dep:pin-project-lite", "dep:http"]
macro     = ["dep:aerro-macros"]
tracing   = ["dep:tracing", "dep:tracing-opentelemetry", "dep:opentelemetry"]
anyhow    = ["dep:anyhow"]
eyre      = ["dep:eyre"]
compat-json = ["dep:serde", "dep:serde_json"]

[dependencies]
aerro-macros = { path = "../aerro-macros", version = "0.2.0", optional = true }
tonic   = { workspace = true, optional = true }
prost   = { workspace = true, optional = true }
bytes   = { workspace = true, optional = true }
tower   = { workspace = true, optional = true }
http    = { workspace = true, optional = true }
pin-project-lite = { workspace = true, optional = true }
bincode = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
anyhow  = { workspace = true, optional = true }
eyre    = { workspace = true, optional = true }
serde   = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dhat = { workspace = true }
criterion = { workspace = true }
trybuild = { workspace = true }

[[bench]]
name = "error_path"
harness = false
