[package]
name = "aerro"
description = "Cross-service gRPC error framework for Rust."
keywords = ["grpc", "tonic", "prost", "error", "trace"]
categories = ["network-programming", "rust-patterns"]
readme = "../../README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[features]
default = ["macro", "tracing"]
macro     = ["dep:aerro-macros"]
tracing   = ["dep:tracing", "dep:tracing-opentelemetry", "dep:opentelemetry"]
anyhow    = ["dep:anyhow"]
eyre      = ["dep:eyre"]
compat-json = ["dep:serde", "dep:serde_json"]

[dependencies]
aerro-macros = { path = "../aerro-macros", version = "0.2.0", optional = true }
tonic   = { workspace = true }
prost   = { workspace = true }
bytes   = { workspace = true }
tower   = { workspace = true }
http    = { workspace = true }
pin-project-lite = { workspace = true }
bincode = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
anyhow  = { workspace = true, optional = true }
eyre    = { workspace = true, optional = true }
serde   = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[lints]
workspace = true

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dhat = { workspace = true }
criterion = { workspace = true }
trybuild = { workspace = true }

[[bench]]
name = "error_path"
harness = false

[[example]]
name = "basic"
required-features = ["macro"]

[[example]]
name = "trace_chain"
required-features = ["macro"]

[[example]]
name = "exposure"
required-features = ["macro"]

[[example]]
name = "compat"
required-features = ["macro", "compat-json"]

[[example]]
name = "tower_compose"
required-features = []

